<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SugerManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="title_main">首页</string>
    <string name="title_record">记录</string>
    <string name="title_analyse">分析</string>
    <string name="title_visit">就诊</string>
    <string name="title_devicelist">设备列表</string>
    <string name="broadcast">播报</string>
    <string name="book">订阅</string>
    <string name="bt_list">设备列表</string>
    
    <string name="current_suger">当前血糖值</string>
    <string name="open_bt">打开蓝牙</string>
    <string name="tip_open_bt">请打开你的蓝牙开关，以便连接设备。</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="bind_device">绑定设备</string>
    <string name="sn">设备SN号</string>
    <string name="sensor">传感器号</string>
    <string name="fail_connect">连接失败</string>
    <string name="tip_fail_connect">设备连接失败，请重新连接。</string>
    <string name="binding">绑定中……</string>
    <string name="success_bind">绑定连接成功</string>
    <string name="success_bind_polarizing">绑定成功，开始极化……</string>
    <string name="fail_bind">绑定连接失败</string>
    <string name="search">搜索</string>
    <string name="cancel_search">取消搜索</string>

</resources>
