<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bt__dialog_bg"
    android:paddingLeft="@dimen/dialog_padding_horizontal"
    android:paddingRight="@dimen/dialog_padding_horizontal">
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.7"/>
    
    <TextView 
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="8.5"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/open_bt"
        android:textColor="@color/dialgo_text"
        android:textSize="@dimen/dialog_title"
        android:drawableRight="@drawable/bt_gray"
        android:drawableEnd="@drawable/bt_gray"/>
    
    <TextView 
        android:id="@+id/tip"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="14.1"
        android:gravity="center"
        android:text="@string/tip_open_bt"
        android:textColor="@color/dialgo_text"
        android:textSize="@dimen/dialog_tip"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.4"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">
        
        <Button 
            android:id="@+id/btn_left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/ok"
            android:textColor="@color/title_white"
            android:textSize="@dimen/dialog_title"
            style="?android:attr/buttonBarButtonStyle"/>
        
        <Button 
            android:id="@+id/btn_right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/cancel"
            android:textColor="@color/title_white"
            android:textSize="@dimen/dialog_title"
            style="?android:attr/buttonBarButtonStyle"/>        "
    </LinearLayout>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.4"/>    
</LinearLayout>
