<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bind_dialog_bg"
    android:paddingLeft="@dimen/dialog_padding_horizontal"
    android:paddingRight="@dimen/dialog_padding_horizontal">
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8"/>
    
    <TextView 
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="8.8"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/bind_device"
        android:textColor="@color/dialgo_text"
        android:textSize="@dimen/dialog_title"
        android:drawableRight="@drawable/bind_gray"
        android:drawableEnd="@drawable/bind_gray"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="29.1"
        android:orientation="vertical"
        style="?android:attr/buttonBarStyle"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingLeft="@dimen/dialog_padding_bind"
        android:paddingRight="@dimen/dialog_padding_bind">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6.6"
            android:gravity="center_vertical|start"
            android:text="@string/sn"
            android:textColor="@color/dialgo_text"
            android:textSize="@dimen/dialog_tip"/>
        
        <EditText 
            android:id="@+id/sn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5.6"
            android:textColor="@color/dialgo_text"
            android:textSize="@dimen/dialog_tip"
            android:background="@drawable/rounded_edittext"
            android:inputType="text"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6.6"
            android:gravity="center_vertical|start"
            android:text="@string/sensor"
            android:textColor="@color/dialgo_text"
            android:textSize="@dimen/dialog_tip"/>
        
        <EditText 
            android:id="@+id/sensor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5.6"
            android:textColor="@color/dialgo_text"
            android:textSize="@dimen/dialog_tip"
            android:background="@drawable/rounded_edittext"
            android:inputType="text"/>
            
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.6"/>        
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.5"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">
        
        <Button 
            android:id="@+id/btn_left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/title_white"
            android:textSize="@dimen/dialog_title"
            style="?android:attr/buttonBarButtonStyle"/>
        
        <Button 
            android:id="@+id/btn_right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/title_white"
            android:textSize="@dimen/dialog_title"
            style="?android:attr/buttonBarButtonStyle"/>        
    </LinearLayout>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.3"/>    
</LinearLayout>
